# workplace/CMakeLists.txt

install (DIRECTORY ppp DESTINATION /workplace/ppp)
install (DIRECTORY pppar DESTINATION /workplace/pppar)
install (DIRECTORY pppucar DESTINATION /workplace/pppucar)
install (DIRECTORY cc2noncc DESTINATION /workplace/cc2noncc)
install (DIRECTORY diff DESTINATION /workplace/diff)
install (DIRECTORY ephint DESTINATION /workplace/ephint)
