# workplace/CMakeLists.txt

install (DIRECTORY ppp DESTINATION /workplace)
install (DIRECTORY pppar DESTINATION /workplace)
install (DIRECTORY pppucar DESTINATION /workplace)
install (DIRECTORY cc2noncc DESTINATION /workplace)
install (DIRECTORY diff DESTINATION /workplace)
install (DIRECTORY ephint DESTINATION /workplace)
